# kittyBoard

./: .gitignore  CMakeLists.txt  KeyButton.qml  Main.qml  README.md  main.cpp
assets/: english_10k.txt
qml/: KeyButton.qml  Main.qml  ThemeEditor.qml
src/: KeyboardSimulator.cpp  KeyboardSimulator.h  SuggestionEngine.cpp  SuggestionEngine.h  ThemeManager.cpp  ThemeManager.h  WindowManager.h  main.cpp
themes/: dark.json  neon.json
